# CourierPlus

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
apps/core/: admin.py
apps/order/: admin.py  managers.py  models.py
apps/user/: admin.py  apps.py  managers.py  models.py  services.py
apps/user/templatetags/: get_active_menu_item.py  paginator.py
common/: constants.py  upload_to_file.py
config/: celery.py  settings.py  urls.py
static/css/: core-dark.css  core.css  custom-style.css  response.css  theme-default-dark.css  theme-default.css
static/css/admin/: admin.css  changelists.css  forms.css
static/css/pages/: page-auth.css  page-profile.css  ui-carousel.css
static/data-json/: search-vertical.json
static/fonts/: boxicons.css  flag-icons.css  material-symbols.css
static/js/: config.js  main.js  messageEngine.js  tables-datatables-basic.js  template-customizer.js
static/js/DataTable/: book_list.js  students.js
static/js/auth/: choice_user_type.js  main-auth.js  pages-auth-multisteps.js  pages-auth-verify.js  pages-auth.js
static/js/extended/: extended-ui-sweetalert2.js  extended-ui-treeview.js
templates/Base/: analytics.html  base.html  footer.html  links.html  messages.html  script.html
templates/Dashboard/: base.html  navigator.html
templates/Errors/: 403.html
templates/admin/: actions.html  app_list.html  base.html  base_site.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  login.html  navbar.html  object_history.html  pagination.html  search_form.html  set_icon_for_menu.html  submit_line.html
(+36 files in other folders)
