[tool.poetry]
name = "courierplus"
version = "0.1.0"
description = "Курьерская служба"
authors = ["WayupKG <adikgk232323@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
celery = {extras = ["redis"], version = "^5.4.0"}
setuptools = "^69.1.1"
djangorestframework = "^3.13.1"
django-ckeditor = "^6.2.0"
django-cleanup = "^8.1.0"
django-debug-toolbar = "4.3.0"
django-qr-code = "^4.0.1"
django-filter = "^23.5"
django-user-agents = "^0.4.0"
django-imagekit = "^5.0.0"
django-cachalot = "^2.5.3"
django-redis = "^5.2.0"
Pillow = "^10.2.0"
python-json-logger = "^2.0.2"
transliterate = "1.10.2"
environs = "^10.3.0"
fontawesomefree = "^6.1.2"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.5"
weasyprint = "^61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
